--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
-    "react-typing-effect": "^2.0.5"
+    "react-typing-effect": "^2.0.5",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
