--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
     "react-typing-effect": "^2.0.5",
+    "sweetalert2": "^11.14.5",
     "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
