--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aos": "^3.0.0-beta.6",
+    "framer-motion": "^12.23.9",
     "react": "^18.3.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-countup": "^6.5.3",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.27.0",
     "react-scroll": "^1.9.0",
     "react-typing-effect": "^2.0.5",
+    "sass": "^1.89.2",
     "sweetalert2": "^11.14.5",
     "tailwind-scrollbar": "^3.1.0"
   },
